--- a/RestFul.API/RestFul.API.csproj
+++ b/RestFul.API/RestFul.API.csproj
@@ -42,11 +42,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attribute\Test1.cs" />
+    <Compile Include="Configuration\Test2.cs" />
+    <Compile Include="HttpHandlers\Class1.cs" />
+    <Compile Include="Interface\Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
