--- a/RestFul.API/RestFul.API.csproj
+++ b/RestFul.API/RestFul.API.csproj
@@ -35,6 +35,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -43,11 +44,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attribute\Test1.cs" />
+    <Compile Include="AttributeManager\Test1.cs" />
+    <Compile Include="Common\AssignmentDefinition.cs" />
+    <Compile Include="Common\PropertyInvoker.cs" />
+    <Compile Include="Common\ReflectionUtils.cs" />
+    <Compile Include="Common\StringMapTypeDeserializer.cs" />
     <Compile Include="Configuration\RestConfig.cs" />
     <Compile Include="Extensions\AspNetRequest.cs" />
     <Compile Include="Extensions\AspNetResponse.cs" />
     <Compile Include="Extensions\HttpRequestExtensions.cs" />
+    <Compile Include="Host\RestPath.cs" />
     <Compile Include="HttpHandlers\404Handler.cs" />
     <Compile Include="HttpHandlers\ForbiddenHttpHandler.cs" />
     <Compile Include="HttpHandlers\HttpHandlerBase.cs" />
