--- a/RestFul.API/RestFul.API.csproj
+++ b/RestFul.API/RestFul.API.csproj
@@ -34,6 +34,7 @@
       <HintPath>..\packages\ServiceStackText.3.8.3.1\lib\ServiceStack.Text.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web" />
@@ -51,12 +52,15 @@
     <Compile Include="Common\SerializeManager.cs" />
     <Compile Include="Common\StringMapTypeDeserializer.cs" />
     <Compile Include="Configuration\RestConfig.cs" />
+    <Compile Include="Configuration\RestResourceSection.cs" />
     <Compile Include="Extensions\AspNetRequest.cs" />
     <Compile Include="Extensions\AspNetResponse.cs" />
     <Compile Include="Extensions\HttpRequestExtensions.cs" />
     <Compile Include="Extensions\ObjectExtensions.cs" />
     <Compile Include="Host\RestPath.cs" />
-    <Compile Include="Host\Runtime.Filters.cs" />
+    <Compile Include="Host\RuntimeManager.Config.cs" />
+    <Compile Include="Host\RuntimeManager.Filters.cs" />
+    <Compile Include="Host\ServiceManager.cs" />
     <Compile Include="Host\ServiceStackHost.cs" />
     <Compile Include="HttpHandlers\404Handler.cs" />
     <Compile Include="HttpHandlers\ForbiddenHttpHandler.cs" />
